empty backend and fix font-weight on safari and firefox

--- a/client/src/styles/layout.scss
+++ b/client/src/styles/layout.scss
@@ -15,6 +15,7 @@ body {
   p, h1, h2, h3 {
     padding: 0;
     margin: 0;
+    font-weight: 500;
   }
 
   a {
